--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <h3 class="text-xl font-semibold mb-2 text-gray-900">Brža realizacija prodaje</h3>
                     <p class="text-gray-600">
-                        Uklanjamo administrativne prepreke i ubrzavamo proces prodaje. Od pregovora do isporuke vaučera, mi
+                        Uklanjamo administrativne prepreke i ubrzavamo proces prodaje. Od pregovora do praćenja povratnih odgovora, mi
                         upravljamo svim koracima kako biste vi mogli da ostvarite prihod brže i bez dodatnog opterećenja.
                     </p>
                 </div>
